--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div class="main">
-      <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
+      <div class="container" style="display: flex;">💣🤯💥</div>
+      <nav class="toolbar" style="height: 80px;">Boom?</nav>
     </div>
   </body>
 </html>
