--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <div class="main">
+    <main class="main">
       <div class="container" style="display: flex;">💣🤯💥</div>
       <nav class="toolbar" style="height: 80px;">Boom?</nav>
-    </div>
+    </main>
   </body>
 </html>
